# NEW

./: package.json  rvc-webui.ipynb
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
